Add swagger doc to the comment end point
